--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -20,7 +20,7 @@
     <div class="text-center">
       <mat-error *ngIf="errors">Грешно потребителско име или парола!</mat-error>
       <button class="search-btn" type="button" mdbBtn gradient="blue" size="lg" mdbWavesEffect (click)="loginUser()"
-        [disabled]="loginForm.invalid">Логин</button>
+        [disabled]="loginForm.invalid">Вход</button>
       <!-- <p class="message">Нямате профил? <a (click)="goToRegister()">Регистрирайте се тук</a></p> -->
     </div>
     <!-- <button (click)="printInfo()">Print</button> -->
