--- a/src/app/core/authentication/registration/registration.component.scss
+++ b/src/app/core/authentication/registration/registration.component.scss
@@ -27,3 +27,10 @@
 // ::ng-deep .mat-input-element{
 //   background-color: rgb(180, 180, 180);
 // }
+
+.password-specs{
+  font-size: 0.9rem;
+  position: absolute;
+  margin-left: 25px;
+  padding: 2px;
+}
