--- a/src/app/modules/home/homepage/search-form/search-form.component.scss
+++ b/src/app/modules/home/homepage/search-form/search-form.component.scss
@@ -27,7 +27,7 @@
     margin: 5px !important;
     margin-bottom: 15px !important;
     font-size: 1.2rem !important;
-    width: 30%;
+    width: 200px;
     height: 60px;
     margin-top: 20px;
 }
