--- a/src/app/modules/hosting/add-vehicle/form-amenities/form-amenities.component.html
+++ b/src/app/modules/hosting/add-vehicle/form-amenities/form-amenities.component.html
@@ -1,24 +1,24 @@
 <div class="container text-center">
     <form [formGroup]="amenitiesForm">
         <div class="row">
-            <mat-selection-list class="col-4 text-left" formControlName="safetyExtras">
-                <h3 class="text-center">Безопасност</h3>
+            <mat-selection-list class="col-12 col-md-4 text-left" formControlName="safetyExtras">
+                <h4 class="text-center">Безопасност</h4>
                 <mat-list-option class="mt-2" color="primary" *ngFor="let safetyExtra of safety" [value]="safetyExtra.id">{{ safetyExtra.name }}</mat-list-option>
             </mat-selection-list>
             
-            <mat-selection-list class="col-4 text-left" formControlName="comfortExtras">
-                <h3 class="text-center">Комфорт</h3>
+            <mat-selection-list class="col-12 col-md-4 text-left" formControlName="comfortExtras">
+                <h4 class="text-center">Комфорт</h4>
                 <mat-list-option class="mt-2" color="primary" *ngFor="let comfortExtra of comfort" [value]="comfortExtra.id">{{ comfortExtra.name }}</mat-list-option>
             </mat-selection-list>
             
-            <mat-selection-list class="col-4 text-left" formControlName="otherExtras">
-                <h3 class="text-center">Други</h3>
+            <mat-selection-list class="col-12 col-md-4 text-left" formControlName="otherExtras">
+                <h4 class="text-center">Други</h4>
                 <mat-list-option class="mt-2" color="primary" *ngFor="let otherExtra of others" [value]="otherExtra.id">{{ otherExtra.name }}</mat-list-option>
             </mat-selection-list>
         </div>
     </form>
 
-    <button mat-button matStepperPrevious>Back</button>
-    <button mat-button matStepperNext>Next</button>
+    <button mat-button matStepperPrevious>Назад</button>
+    <button mat-button matStepperNext>Напред</button>
 </div>
 <!-- <button mat-button (click)="submit()">Submit</button> -->
