--- a/src/app/modules/user/favourites/favourites.component.html
+++ b/src/app/modules/user/favourites/favourites.component.html
@@ -1,11 +1,24 @@
 <div class="wrapper"></div>
-    <div class="container">
-        <h1 class="mt-2">
-            Любими
-        </h1>
-        <div class="row mb-3">
-            <div *ngFor="let car of cars" class="col-6 text-center mt-4">
-                <app-cars-list-item [car]="car" (update)="refreshCars()"></app-cars-list-item>
-            </div>
-        </div>
+<div class="container">
+  <h1 class="mt-2">
+    Любими
+  </h1>
+  <div *ngIf="cars.length" class="row mb-3">
+    <div *ngFor="let car of cars" class="col-12 col-lg-6 text-center mt-4">
+      <app-cars-list-item
+        [car]="car"
+        (update)="refreshCars()"
+      ></app-cars-list-item>
     </div>
+  </div>
+</div>
+
+<div
+  *ngIf="!cars.length"
+  class="text-center all-cars"
+  (click)="redirectToAll()"
+>
+  <h3>Списъкът ви с любими е празен!</h3>
+  <h3>Разгледайте нашите предложения тук</h3>
+  <div class="img"></div>
+</div>
