--- a/src/app/modules/vehicles/car-details/car-carousel/car-carousel.component.html
+++ b/src/app/modules/vehicles/car-details/car-carousel/car-carousel.component.html
@@ -1,2 +1,2 @@
-<ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
+<ngx-gallery class="w-100" [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
 <!-- <button (click)="pics()">pics</button> -->
