--- a/src/app/modules/hosting/manage-cars/manage-cars.component.html
+++ b/src/app/modules/hosting/manage-cars/manage-cars.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row mb-3">
-        <div *ngFor="let car of cars" class="col-6 text-center mt-4">
+        <div *ngFor="let car of cars" class="col-12 col-lg-6 text-center mt-4">
             <div class="choose">
                 <div class="p-0 car-view" [routerLink]="'/cars/'+car.id">
                     <div class="view-wrapper">
