--- a/src/app/modules/hosting/manage-reservations/manage-reservations.component.html
+++ b/src/app/modules/hosting/manage-reservations/manage-reservations.component.html
@@ -1,1 +1,59 @@
-<p>manage-reservations works!</p>
+<div class="gradient"></div>
+<div class="container mb-3">
+  <h2 class="mt-2">Резервации за {{ car?.make }} {{ car?.model }}</h2>
+  <h3 *ngIf="upcomingReservations.length; else noUpcoming" class="mt-5">
+    Предстоящи
+  </h3>
+
+  <ng-template #noUpcoming>
+    <h1 class="text-center mt-5">
+      Няма насрочени резервации за този автомобил
+    </h1>
+  </ng-template>
+
+  <div *ngIf="loading">
+    <app-spinner></app-spinner>
+  </div>
+
+  <div
+    *ngFor="let reservation of upcomingReservations"
+    class="col-12 text-center mt-4"
+  >
+    <app-car-res-item [reservation]="reservation"></app-car-res-item>
+  </div>
+
+  <h3 *ngIf="passedReservations.length" class="mt-5">
+    Стари
+  </h3>
+
+  <div
+    *ngFor="let reservation of passedReservations"
+    class="col-12 text-center mt-4"
+  >
+    <app-car-res-item [reservation]="reservation"></app-car-res-item>
+  </div>
+
+  <h3 *ngIf="canceledReservations.length" class="mt-5">
+    Анулирани
+  </h3>
+
+  <div
+    *ngFor="let reservation of canceledReservations"
+    class="col-12 text-center mt-4"
+  >
+    <app-car-res-item [reservation]="reservation"></app-car-res-item>
+  </div>
+
+  <div
+    *ngIf="
+      !upcomingReservations.length &&
+      !passedReservations.length &&
+      !canceledReservations.length
+    "
+    class="mt-5"
+  >
+    <h1 class="text-center">
+      Този автомобил очаква първият си наемател!
+    </h1>
+  </div>
+</div>
