--- a/src/app/modules/user/reservations/reservations.component.scss
+++ b/src/app/modules/user/reservations/reservations.component.scss
@@ -10,3 +10,17 @@
     overflow: hidden;
     z-index: -1;
 }
+
+.all-cars{
+    position: relative;
+    cursor: pointer;
+    width: 100%;
+    height: 78vh;
+    .img{
+        height: 70%;
+        background: url('../../../../assets/images/luxury-cars.png') no-repeat center;
+        // overflow: hidden;    
+        // background-repeat: no-repeat center;
+        background-size: contain;
+    }
+}
