--- a/src/app/modules/vehicles/car-details/car-reservation-tab/car-reservation-tab.component.scss
+++ b/src/app/modules/vehicles/car-details/car-reservation-tab/car-reservation-tab.component.scss
@@ -5,7 +5,7 @@
 
 .reserve-btn{
     font-size: 1.2rem !important;
-    width: 100%;
+    // width: 100%;
     color: white;
     background-color: rgb(0, 146, 12) !important;
     // height: 60px;
@@ -36,7 +36,7 @@
         text-align: right;
     }
     .custom-hr{
-        margin-top: 10px;
-        margin-bottom: 10px;
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 }
