--- a/src/app/modules/vehicles/cars-list/cars-list.component.html
+++ b/src/app/modules/vehicles/cars-list/cars-list.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <div class="row mt-1">
-        <app-search-filters class="col-11 p-0" [filters]="filters"></app-search-filters>
-        <div class="col-1 pl-0">
+    <div class="row mt-1 text-center">
+        <app-search-filters class="col-12 p-0" [filters]="filters"></app-search-filters>
+        <div class="col-12 text-center">
             <!-- <button type="button" class="btn btn-primary btn-lg rounded-circle"><i class="fas fa-search"></i></button> -->
             <button class="search-btn" type="button" mdbBtn gradient="blue" size="md" mdbWavesEffect (click)="searchCars()">Търси</button>
         </div>
@@ -11,7 +11,7 @@
             <app-spinner></app-spinner>
         </div>
 
-        <div *ngFor="let car of cars" class="col-6 text-center mt-4">
+        <div *ngFor="let car of cars" class="col-12 col-lg-6 text-center mt-4">
             <app-cars-list-item [car]="car" [filters]="filters"></app-cars-list-item>
         </div>
 
