--- a/src/app/shared/components/show-rating/show-rating.component.html
+++ b/src/app/shared/components/show-rating/show-rating.component.html
@@ -4,4 +4,4 @@
     </span>
 </ng-template>
 
-<ngb-rating class="rating" [(rate)]="currentRate" [starTemplate]="t" [readonly]="true" max="5"></ngb-rating>
+<ngb-rating class="rating" [(rate)]="rate" [starTemplate]="t" [readonly]="true" max="5"></ngb-rating>
