--- a/src/app/shared/components/show-rating/show-rating.component.scss
+++ b/src/app/shared/components/show-rating/show-rating.component.scss
@@ -2,7 +2,7 @@
     cursor: pointer;
     position: relative;
     display: inline-block;
-    // font-size: 1rem;
+    font-size: 1.3rem;
     color: #d3d3d3;
   }
 .full {
