--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,9 +17,21 @@ body {
 }
 
 .custom-snackbar{
-  font-weight: bold;
   button{
     color: rgb(209, 209, 209);
+  }
+}
+
+.registered-snackbar{
+  position: relative;
+  top: 50px !important;
+  background-color: rgb(238, 238, 238);
+  color: black;
+  font-size: 1.2rem;
+  font-weight: 500;
+  button{
+    background-color: rgb(168, 169, 170);
+    color: black
   }
 }
 
@@ -38,4 +50,8 @@ div, app-show-rating{
 mat-spinner{
   // display: none;
   position: fixed; overflow: visible; margin: auto; top: 0; left: 0; bottom: 0; right: 0; z-index: 999;
+}
+
+.cdk-overlay-container{
+  z-index: 1500 !important;
 }
